@@ -1,8 +1,10 @@
 package pl.bilskik.backend.config;
 
+import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -12,9 +14,11 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
 import pl.bilskik.backend.config.filter.AuthFilter;
 import pl.bilskik.backend.config.manager.AuthManager;
 
+import java.util.Arrays;
 import java.util.List;
 
 
@@ -24,18 +28,20 @@ public class SecurityConfig {
 
     private final AuthFilter authFilter;
     private final AuthManager authenticationManager;
+
     @Autowired
     public SecurityConfig(AuthFilter authFilter,
                           AuthManager authenticationManager) {
         this.authFilter = authFilter;
         this.authenticationManager = authenticationManager;
     }
-    @Bean
 
+    @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
         return httpSecurity
+                .cors(c -> c.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)        //to change later -> its so insecure
-                .addFilterAt(authFilter, UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(authFilter, UsernamePasswordAuthenticationFilter.class)
                 .authorizeHttpRequests((auth) -> {
                     auth
                             .requestMatchers("/auth/register/**", "/auth/login/begin")
@@ -44,17 +50,20 @@ public class SecurityConfig {
                             .authenticated();
                 })
                 .sessionManagement((session) -> {
-                    session.sessionCreationPolicy(SessionCreationPolicy.STATELESS);
+                    session.sessionCreationPolicy(SessionCreationPolicy.ALWAYS);
                 })
                 .build();
     }
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.addAllowedOrigin("http://localhost:3000");
-        config.setAllowedMethods(List.of("GET", "POST", "PUT","DELETE"));
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        configuration.setAllowedMethods(Arrays.asList("GET","POST", "PUT", "DELETE"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
